--- a/PC端品优购项目/shoping/css/common.css
+++ b/PC端品优购项目/shoping/css/common.css
@@ -154,7 +154,7 @@
 }
 .dropdown .dd {
     /* 隐藏 */
-    display: none;
+    /* display: none; */
     width: 210px;
     height: 465px;
     background-color: #c81623;
