--- a/PC端品优购项目/shoping/css/common.css
+++ b/PC端品优购项目/shoping/css/common.css
@@ -166,6 +166,7 @@
     height: 31px;
     line-height: 31px;
     margin-left: 2px;
+    padding-left: 10px;
 }
 .dropdown .dd ul li:hover {
     background-color: #fff;
